--- a/src/todo.txt
+++ b/src/todo.txt
@@ -6,7 +6,7 @@ TO DO Conexión mediante JDBC con la base de datos.
 Manejo de la conexión mediante un menú de terminal que debe tener:
     TO DO Una opción que permita borrar las tablas de la base de datos y su información. (Actions.restart())
     TO DO Una opción que permita crear las tablas de la base de datos. (Actions.restart())
-    TODO Una opción que permita poblar masivamente las tablas de la base de datos leyendo los ficheros generados en la primera práctica.
+    TO DO Una opción que permita poblar masivamente las tablas de la base de datos leyendo los ficheros generados en la primera práctica. (Actions.FillTable)
 
     TODO Diferentes opciones de consulta sobre la información. Ejemplos:
         TODO Seleccionar todos los elementos que contengan un texto concreto.
