--- a/src/todo.txt
+++ b/src/todo.txt
@@ -10,16 +10,16 @@ Manejo de la conexión mediante un menú de terminal que debe tener:
 
     Diferentes opciones de consulta sobre la información. Ejemplos:
         TO DO Seleccionar todos los elementos que contengan un texto concreto.
-        TODO Seleccionar todos los elementos que cumplan una condición.
-        TODO Seleccionar elementos concretos.
+        TO DO Seleccionar todos los elementos que cumplan una condición.
+        TO DO Seleccionar elementos concretos.
 
     TODO Posibilidad de modificar un registro concreto de información. Ejemplo:
         TODO Seleccionar un elemento concreto y permitir su modificación.
 
     TODO Posibilidad de modificar diferentes registros de información.
-    TODO Posibilidad de eliminar un registro concreto de información.
+    TO DO Posibilidad de eliminar un registro concreto de información.
     TODO Posibilidad de eliminar un conjunto de registros de información que cumplan una condición.
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!TODO COMPROBAR QUE TODOS LOS MENUS NO PETAN AL INTRODUCIR COSAS RARAS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-TODO montar autenticación con la clase Identity y la función authenticate de la clase ACBMenu.
+TODO montar autenticación con la clase Identity y la función authenticate de la clase ui.ACBMenu.
